--- a/quiz.html
+++ b/quiz.html
@@ -91,7 +91,7 @@
                               <strong><em> Please click on the navigation below to show the questions</em></strong>
                         </p>
 
-                        <div class="quiz_nav">
+                        <div class="quiz_nav" id="quiznav">
                               <a href="#quest_1">Question 1</a>
                               <a href="#quest_2">Question 2</a>
                               <a href="#quest_3">Question 3</a>
