--- a/topic.html
+++ b/topic.html
@@ -134,9 +134,8 @@
                   <figure>
                         <img id="d_img" src="/images/history.jpg" alt="history development of voice technology">
                         <figcaption>
-                              <a href="#history_img">
-                                    History Development of Voice Technology
-                              </a>
+                              History Development of Voice Technology
+                              <a href="#history_img">[1]</a>
                         </figcaption>
                   </figure>
                   <p>
@@ -236,17 +235,15 @@
             </section>
             <section id="references">
                   <h2>References</h2>
-                  <p>
-                  <ol>
-                        Images:
-                        <li id="history_img">
-                              <a href="https://info.keylimeinteractive.com/history-of-voice-technology"
-                                    target="_blank">Samantha Silver, '[Hisotry of Voice Tech]'[image], in Samantha
-                                    Silver 2020, <em>A History of Voice Technology</em>, Key Lime Interactive, viewed 4
-                                    April 2022, https://info.keylimeinteractive.com/history-of-voice-technology</a>
-                        </li>
-                  </ol>
-                  </p>
+                        <h4>Images:</h4>
+                        <ol>
+                              <li id="history_img">
+                                    <a href="https://info.keylimeinteractive.com/history-of-voice-technology"
+                                          target="_blank">Samantha Silver, '[Hisotry of Voice Tech]'[image], in Samantha
+                                          Silver 2020, <em>A History of Voice Technology</em>, Key Lime Interactive, viewed 4
+                                          April 2022, https://info.keylimeinteractive.com/history-of-voice-technology</a>
+                              </li>
+                        </ol>
             </section>
       </article>
 
