--- a/quiz.html
+++ b/quiz.html
@@ -18,7 +18,7 @@
       <!-- Sigmar Once font -->
       <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
       <!-- Yanone Kaffeesatz font -->
-      <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&family=Yanone+Kaffeesatz:wght@600&display=swap"
+      <link href="https://fonts.googleapis.com/css2?family=Sigmar+ÍOne&family=Yanone+Kaffeesatz:wght@600&display=swap"
             rel="stylesheet">
       <!-- Roboto font-->
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -88,7 +88,7 @@
                   <fieldset class="q_sect">
                         <legend class="f_section"> Read through our topic page if you haven't already, then answer the following questions. Good Luck! </legend>
                         <p>
-                              <strong><em> Please click on the navigation below to show the questions</em></strong>
+                              <strong><em> Please click on the navigation below to display the questions</em></strong>
                         </p>
 
                         <div class="quiz_nav" id="quiznav">
