--- a/topic.html
+++ b/topic.html
@@ -235,15 +235,19 @@
             </section>
             <section id="references">
                   <h2>References</h2>
-                        <h4>Images:</h4>
-                        <ol>
-                              <li id="history_img">
-                                    <a href="https://info.keylimeinteractive.com/history-of-voice-technology"
-                                          target="_blank">Samantha Silver, '[Hisotry of Voice Tech]'[image], in Samantha
-                                          Silver 2020, <em>A History of Voice Technology</em>, Key Lime Interactive, viewed 4
-                                          April 2022, https://info.keylimeinteractive.com/history-of-voice-technology</a>
-                              </li>
-                        </ol>
+                  <h4>Information</h4>
+                  <ol>
+                        <li>
+
+                        </li>
+                  </ol>
+                  <h4>Images:</h4>
+                  <ol>
+                        <li id="history_img">
+                              <a href="https://info.keylimeinteractive.com/history-of-voice-technology"
+                                    target="_blank">Samantha Silver, '[History of Voice Tech]'[image], in Samantha Silver 2020, <em>A History of Voice Technology</em>, Key Lime Interactive, viewed 4 April 2022, https://info.keylimeinteractive.com/history-of-voice-technology</a>
+                        </li>
+                  </ol>
             </section>
       </article>
 
