--- a/enhancements.html
+++ b/enhancements.html
@@ -61,35 +61,6 @@
   <article class="e_container">
     <h1>Enhancements</h1>
     <section class="ex">
-      <h4>1. Figure alignment with the caption: </h4>
-      <samp>
-        figure { <br>
-        text-align: center; <br>
-        display: table; <br>
-        } <br>
-        <br>
-        figcaption { <br>
-        display: table-caption; <br>
-        caption-side: bottom; <br>
-        } <br>
-      </samp>
-      <cite>https://www.w3.org/Style/Examples/007/figures.en.html</cite>
-      <ol class="examples">
-        <li><a href="/topic.html#d_img">development image</a></li>
-        <li><a href="/topic.html#g_img">growth and future image</a></li>
-        <li><a href="/topic.html#r_img">relevant technology image</a></li>
-      </ol>
-
-      <h4>2. Zoom on Hover: </h4>
-      <samp>
-        #g_img:hover { <br>
-        transform: scale(1.5); <br>
-        } <br>
-      </samp>
-      <cite>https://www.w3schools.com/howto/howto_css_zoom_hover.asp</cite>
-      <ol class="examples">
-        <li><a href="topic.html#g_img">Hover on photo to see it transform</a></li>
-      </ol>
       <h4>Side Hoverable Navigation Buttons: </h4>
       <samp>
         #sidenav a { <br>
@@ -117,7 +88,7 @@
         <li><a href="topic.html#sidenav">Side Navigation</a></li>
       </ol>
 
-      <h4>3. Create Tabbed Menu:</h4>
+      <h4>Create Tabbed Menu:</h4>
       <samp>
         .q_sect article { <br>
         display: none; <br>
@@ -130,17 +101,6 @@
       <cite>https://www.w3schools.com/cssref/sel_target.asp</cite>
       <ol class="examples">
         <li><a href="quiz.html#quiznav">Quiz Navigation Tabs for the questions</a></li>
-      </ol>
-
-      <h4>4. Word Wrap:</h4>
-      <samp>
-        cite { <br>
-        word-wrap: break-word; <br>
-        } <br>
-      </samp>
-      <cite>https://www.w3schools.com/cssref/css3_pr_word-wrap.asp</cite>
-      <ol class="examples">
-        <li><a href="enhancements.html">Resize to see the citations word-wrap as you decrease the size</a></li>
       </ol>
 
       <h4>Responsive Navigation Bar:</h4>
