--- a/topic.html
+++ b/topic.html
@@ -132,10 +132,9 @@
                         that could record sound and play it back. This decide was created on 4th December, 1877.
                   </p>
                   <figure>
-                        <img id="d_img" src="/images/history.jpg" alt="history development of voice technology">
+                        <img src="/images/history.jpg" alt="history development of voice technology">
                         <figcaption>
                               History Development of Voice Technology
-                              <a href="#history_img">[1]</a>
                         </figcaption>
                   </figure>
                   <p>
@@ -236,16 +235,66 @@
             <section id="references">
                   <h2>References</h2>
                   <h4>Information</h4>
-                  <ol>
+                  <ol class="ref">
                         <li>
-
+                              <a href="https://www.verizon.com/articles/speech-recognition-technology/"><em>A Guide to Voice-activated Technology</em> (2022)</a>
+                        </li>
+                        <li>
+                              <a href="https://medium.com/swlh/voice-technology-shaping-the-future-of-website-development-1e7feb99af5f">Sadia, Mehmood (2021) <em>Voice Technology — Shaping the Future of Website Development </em></a>
+                        </li>
+                        <li>
+                              <a href="https://www.softwaretestinghelp.com/voice-recognition-software/#:~:text=Best%20Voice%20Recognition%20Software%20Reviews%201%20Dragon%20Professional.,version%20is%20available%20at%20a%20price%20of%20%249.99."><em>10 Best Voice Recognition Software (Speech Recognition In 2022)</em></a>
+                        </li>
+                        <li>
+                              <a href="https://www.loc.gov/collections/edison-company-motion-pictures-and-sound-recordings/articles-and-essays/history-of-edison-sound-recordings/history-of-the-cylinder-phonograph/"><em>History of the Cylinder Phonograph. </em></a>
+                        </li>
+                        <li>
+                              <a href="https://www.pcworld.com/article/477914/speech_recognition_through_the_decades_how_we_ended_up_with_siri.html">Pinola, Melanie. (2011). <em>Speech Recognition Through the Decades: How We Ended Up With </em></a>
+                        </li>
+                        <li>
+                              <a href="https://www.nuance.com/healthcare.html">Nuance</a>
+                        </li>
+                        <li>
+                              <a href="https://meticulousblog.org/top-10-companies-in-speech-and-voice-recognition-market/#:~:text=Top%2010%20Companies%20in%20Speech%20and%20Voice%20Recognition,7%20Sensory%2C%20Inc.%20%28U.S.%29%208%20LumenVox%20LLC%20%28U.S.%29"><em>Top 10 Companies in speech and voice recognition market. </em>(2022).</a>
+                        </li>
+                        <li>
+                              <a href="https://assets.ctfassets.net/yze1aysi0225/OPz6aOOzFGsbI5diUIimr/dc2e03b03cf710089c4e018f6192edf9/Speechmatics-Report-Trends-Predictions-Voice-Technology-2021.pdf"><em>Trends and predictions for voice technology in 2021.</em> (2021)</a>
+                        </li>
+                        <li>
+                              <a href="https://summalinguae.com/language-technology/speech-recognition-software-history-future/"><em>Speech Recognition Software: Past, Present, and Future. (2021). </em></a>
+                        </li>
+                        <li>
+                              <a href="https://www.dbswebsite.com/blog/trends-in-voice-search/"><em>Voice Search Statistics and Emerging Trends.</em> 2021</a>
+                        </li>
+                        <li>
+                              <a href="https://masterofcode.com/blog/9-key-predictions-for-the-future-of-voice-assistants"><em>9 Key Predictions for the Future Of Voice Assistants.</em> (2021)</a>
+                        </li>
+                        <li>
+                              <a href="https://www.linkedin.com/pulse/top-voice-technology-trends-2021-pharynxai/?trk=organization-update-content_share-article"><em>Top Voice Technology Trends in 2021.</em> (2021)</a>
+                        </li>
+                        <li>
+                              <a href="https://vogovoice.com/blog/introduction-to-voice-technology/"><em>A Basic Introduction to Voice Technology.</em>(2020)</a>
                         </li>
                   </ol>
                   <h4>Images:</h4>
-                  <ol>
-                        <li id="history_img">
-                              <a href="https://info.keylimeinteractive.com/history-of-voice-technology"
-                                    target="_blank">Samantha Silver, '[History of Voice Tech]'[image], in Samantha Silver 2020, <em>A History of Voice Technology</em>, Key Lime Interactive, viewed 4 April 2022, https://info.keylimeinteractive.com/history-of-voice-technology</a>
+                  <ol class="ref">
+                        <li>
+                              <a href="https://assets.ctfassets.net/yze1aysi0225/OPz6aOOzFGsbI5diUIimr/dc2e03b03cf710089c4e018f6192edf9/Speechmatics-Report-Trends-Predictions-Voice-Technology-2021.pdf">Speechmatics, <em>Speech Recognition Software: Past, Present, and Future</em></a>
+                        </li>
+                        <li>
+                              <a href="https://rezaid.co.uk/voice-technology-importance/">Kelly Bowers, '[Importance of Voice Technology]'[images], in Kelly Bowers 2019, <em>Why is Voice Technology Important for your Business?</em>, Rezaid</a>
+                        </li>
+                        <li>
+                              <a href="https://info.keylimeinteractive.com/history-of-voice-technology">Samantha Silver, '[History of Voice Tech]'[image], in Samantha Silver 2020, <em>A History of Voice Technology</em>, Key Lime Interactive</a>
+                        </li>
+                        <li>
+                              <a href="https://www.sciencedirect.com/topics/computer-science/biometric-technology"><em>Biometric Technology.</em></a>
+                        </li>
+                        <li>
+                              <a href="https://www.sciencedirect.com/topics/computer-science/biometric-technology"><em>What is Biometrics? How is it used in security?.</em></a>
+                        </li>
+                        <li>
+                              <a href="https://www.biometricsinstitute.org/what-is-biometrics/types-of-biometrics/"><em>Types of Biometrics. </em></a>
                         </li>
                   </ol>
             </section>
